--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       e.preventDefault();
       
       // 🔁 AFTER DEPLOYING YOUR BACKEND, REPLACE THIS URL
-      const API_URL = "https://outage-cost-calculator-api.onrender.com";
+      const API_URL = "https://outage-cost-calculator-api.onrender.com/calculate";
 
       const data = {
         capacity_mw: parseFloat(document.getElementById('capacity').value),
