--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <input type="number" id="capacity" placeholder="e.g., 500" min="1" value="600" required>
 
     <label>Outage Duration (hours)</label>
-    <input type="number" id="duration" placeholder="e.g., 8" min="0.1" step="0.5" value="8" required>
+    <input type="number" id="duration" placeholder="e.g., 8" min="0.1" value="8" required>
 
     <label>Fuel Type</label>
     <select id="fuel">
