--- a/dashboard.html
+++ b/dashboard.html
@@ -20,8 +20,8 @@
 
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
   <script>
-    const SUPABASE_URL = 'YOUR_SUPABASE_URL';
-    const SUPABASE_ANON_KEY = 'YOUR_SUPABASE_ANON_KEY';
+    const SUPABASE_URL = 'https://lrghbikblionxchxwhxz.supabase.co';
+    const SUPABASE_ANON_KEY = 'sb_publishable__TyE_TvZEXQFJtWZ-L9uxA_jYwEpFu8';
     const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
     async function updateAuthUI() {
