--- a/index.html
+++ b/index.html
@@ -92,8 +92,25 @@
     }
 
     async function login() {
-      const { error } = await supabaseClient.auth.signInWithOAuth({ provider: 'google' });
-      if (error) console.error('Login error:', error);
+      const email = prompt("Enter your work email to receive a secure login link:");
+      if (!email || !email.includes('@')) {
+        alert("Please enter a valid email.");
+        return;
+      }
+    
+      const { error } = await supabaseClient.auth.signInWithOtp({
+        email: email,
+        options: {
+          emailRedirectTo: 'https://outage-cost-calculator-frontend.vercel.app'
+        }
+      });
+    
+      if (error) {
+        alert("Error sending login link: " + error.message);
+        console.error(error);
+      } else {
+        alert("✅ Check your email for a secure login link!");
+      }
     }
 
     async function logout() {
